--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,12 @@ a {
 /* Обертка-центровщик -------------- */
 
 .container {
-    width: 1200px;
+    min-width: 768px;
+    max-width: 1200px;
+    /*width: 1200px;*/
     margin: 0 auto;
     background-color: #ffffff;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.1);
 } 
 
 
@@ -104,7 +107,7 @@ a.active-page:focus {
     background-image: url("../img/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 50% 50%;
+    background-position: 50% -56px;
 
     position: relative;
 }
@@ -310,8 +313,8 @@ a.active-page:focus {
     width: 100%;
     background-image: url("../img/map.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 45%;
+    background-size: auto;
+    background-position: 50% 56%;
 }
 
 
@@ -320,7 +323,7 @@ a.active-page:focus {
 /* Футер ------------------ */
 
 .main-footer {
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 .footer-hashtag a {
@@ -334,11 +337,9 @@ a.active-page:focus {
 
 .footer-social {
     text-align: center;
-}
-
-.footer-social ul {
     list-style: none;
 }
+
 
 .social-button {
     color: #ffffff;
@@ -379,7 +380,7 @@ a.active-page:focus {
     background-image: url("../img/background-blur.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 50% 50%;
+    background-position: 50% 16%;
 }
 
 .hotels-filter-form fieldset {
@@ -455,7 +456,6 @@ input.filter-input-price {
 
 /* Результаты фильтрации ----------- */
 
-
 .filter-result-count {
     font-size: 21px;
 }
@@ -520,8 +520,11 @@ a.active-sorting-direction {
     list-style: none;
 }
 
-.filter-result-list li {
+.filter-result-item {
     border-top: 1px solid #e5e5e5; 
+}
+.filter-result-item:last-child {
+    border-bottom: 1px solid #e5e5e5; 
 }
 
 a.filter-item-title {
@@ -585,3 +588,406 @@ a.filter-item-title:active {
 .hotel-rating {
     background-color: #f2f2f2;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ================================================================== */
+/* ================================================================== */
+/* ================================================================== */
+/* ================================================================== */
+/* ================================================================== */
+
+.content-container {
+    margin-left: 72px;
+    margin-right: 72px;
+}
+
+
+
+.main-header {
+    min-height: 56px;
+}
+
+.main-navigation {
+    position: relative;
+}
+
+.main-header-logo {
+    margin: auto;
+
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    right: 0;
+
+    width: 138px;
+    height: 70px;
+
+    z-index: 99;
+}
+
+.site-navigation {
+    margin: 0;
+    padding: 0;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.site-navigation li {
+    margin: 0 auto;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+    min-width: 100px;
+}
+
+.site-navigation li:nth-child(1) {
+    margin-left: 72px;
+
+    text-align: left;
+}
+
+.site-navigation li:nth-child(2) {
+    margin-left: -50px;
+
+    text-align: left;
+}
+
+.site-navigation li:nth-child(3) {
+    margin-right: -50px;
+
+    text-align: right;
+}
+
+.site-navigation li:nth-child(4) {
+    margin-right: 72px;
+
+    text-align: right;
+}
+
+
+
+
+
+
+
+
+.welcome {
+    padding-top: 76px;
+    padding-bottom: 71px;
+}
+
+
+.section-description-header {
+    margin-top: 61px;
+    margin-bottom: 27px;
+}
+
+.section-description-body {
+    margin-top: 27px;
+    margin-bottom: 50px;
+}
+
+
+
+
+
+
+.features-list {
+    padding: 0;
+    margin: 0;
+
+    display: flex;
+    flex-wrap: wrap;
+
+    position: relative;
+}
+
+.feature-item-with-image:nth-child(1) {
+    margin-right: 800px;
+    order: 1;
+}
+
+.more-features-item {
+    order: 2;
+}
+
+.feature-item-with-image:nth-child(2) {
+    margin-left: 800px;
+    order: 3;
+}
+
+.feature-item {
+    order: 4;
+}
+
+.feature-item,
+.feature-item-with-image {
+    width: 400px;
+
+    /*Временно*/
+    min-height: 256px;
+}
+.feature-item-with-image:nth-child(1)::before,
+.feature-item-with-image:nth-child(2)::before {
+    content: "";
+    width: 800px;
+    min-height: 256px;
+
+    background-repeat: no-repeat;
+    background-position: 50% 54%;
+
+    position: absolute;
+}
+
+.feature-item-with-image:nth-child(1)::before {
+    right: 0;
+
+    background-image: url("../img/features-1.jpg");
+}
+
+.feature-item-with-image:nth-child(2)::before {
+    left: 0;
+
+    background-image: url("../img/features-2.jpg");
+}
+
+.more-features-list {
+    padding: 0;
+    margin: 0;
+
+    display: flex;
+}
+
+.more-feature-item {
+    width: 400px;
+
+    /*Временно*/
+    min-height: 330px;
+}
+
+.more-feature-item:nth-child(1)::after,
+.more-feature-item:nth-child(2)::after,
+.more-feature-item:nth-child(3)::after {
+    content: "";
+    width: 100px;
+    height: 100px;
+
+    background-repeat: no-repeat;
+    background-position: 50% 100%;
+
+    position: absolute;
+}
+
+.more-feature-item:nth-child(1)::after {
+    background-image: url("../img/icon-1.svg");
+}
+
+.more-feature-item:nth-child(2)::after {
+    background-image: url("../img/icon-2.svg");
+}
+
+.more-feature-item:nth-child(3)::after {
+    background-image: url("../img/icon-3.svg");
+}
+
+
+
+
+
+
+
+
+
+
+.main-footer {
+    min-height: 120px;
+
+    display: flex;
+    align-items: center;
+
+}
+
+.footer-hashtag, 
+.footer-social, 
+.footer-copyright {
+    margin: 0;
+    padding: 0;
+
+    width: 33.33%;
+    text-align: center;
+}
+
+.footer-social {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-social-item {
+    margin-right: 6px; 
+
+    height: 48px;
+    width: 46px;
+
+    background-color: #81b3d2;
+}
+
+.footer-social-item:last-child {
+    margin-right: 0px; 
+}
+
+
+
+
+
+
+
+.hotels-filter-setting {
+
+    min-height: 217px;
+}
+
+.hotels-filter-form {
+    display: flex;
+}
+
+.filter-info-container {
+    display: flex;
+    min-height: 86px;
+    align-items: center;
+}
+
+
+.filter-info-container ul {
+    margin: 0;
+    padding: 0;
+}
+
+.filter-result-count {
+    margin: 0;
+    min-width: 135px; 
+}
+
+.filter-result-sorting {
+    margin: 0;
+    margin-left: 30px;
+}
+
+.sorting-type-list li {
+    margin-left: 35px;
+
+}
+
+.sorting-type-list {
+    display: flex;
+    width: 100%;
+}
+
+.sorting-direction-list {
+    min-width: 110px;
+}
+
+
+
+
+
+
+
+
+.filter-result-list {
+    margin: 0;
+    padding: 0;
+}
+
+.filter-result-item {
+    min-height: 150px;
+}
+
+.filter-result-item:last-child {
+    min-height: 150px;
+}
+
+.hotel-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    min-height: 150px;
+}
+
+.hotel-description-container {
+    margin-left: 30px;
+    width: 100%;
+}
+
+.rating-and-stars-container {
+    min-width: 110px;
+}
+
+
+.detail-descriptions-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.detail-description-container {
+    margin-right: 6px;
+    min-width: 110px;
+}
+
+.hotel-description-container h1,
+.hotel-type,
+.hotel-price {
+    margin: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
