--- a/css/style.css
+++ b/css/style.css
@@ -592,28 +592,14 @@ a.filter-item-title:active {
 
 
 
-
-
-
-
-
-
-
-
-
-
-/* ================================================================== */
-/* ================================================================== */
-/* ================================================================== */
-/* ================================================================== */
-/* ================================================================== */
+/* ======================= Ниже - все, что касается сеток. ================= */
+/* ======================= Потом все перемещу наверх ======================= */
+/* ======================= и аккуратно расставлю =) ======================== */
 
 .content-container {
     margin-left: 72px;
     margin-right: 72px;
 }
-
-
 
 .main-header {
     min-height: 56px;
@@ -678,18 +664,10 @@ a.filter-item-title:active {
     text-align: right;
 }
 
-
-
-
-
-
-
-
 .welcome {
     padding-top: 76px;
     padding-bottom: 71px;
 }
-
 
 .section-description-header {
     margin-top: 61px;
@@ -700,11 +678,6 @@ a.filter-item-title:active {
     margin-top: 27px;
     margin-bottom: 50px;
 }
-
-
-
-
-
 
 .features-list {
     padding: 0;
@@ -804,21 +777,11 @@ a.filter-item-title:active {
     background-image: url("../img/icon-3.svg");
 }
 
-
-
-
-
-
-
-
-
-
 .main-footer {
     min-height: 120px;
 
     display: flex;
     align-items: center;
-
 }
 
 .footer-hashtag, 
@@ -849,14 +812,7 @@ a.filter-item-title:active {
     margin-right: 0px; 
 }
 
-
-
-
-
-
-
 .hotels-filter-setting {
-
     min-height: 217px;
 }
 
@@ -869,7 +825,6 @@ a.filter-item-title:active {
     min-height: 86px;
     align-items: center;
 }
-
 
 .filter-info-container ul {
     margin: 0;
@@ -888,7 +843,6 @@ a.filter-item-title:active {
 
 .sorting-type-list li {
     margin-left: 35px;
-
 }
 
 .sorting-type-list {
@@ -899,13 +853,6 @@ a.filter-item-title:active {
 .sorting-direction-list {
     min-width: 110px;
 }
-
-
-
-
-
-
-
 
 .filter-result-list {
     margin: 0;
@@ -937,7 +884,6 @@ a.filter-item-title:active {
     min-width: 110px;
 }
 
-
 .detail-descriptions-container {
     display: flex;
     flex-direction: row;
@@ -953,41 +899,3 @@ a.filter-item-title:active {
 .hotel-price {
     margin: 0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
