--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ html {
 
 
 
+
 /* Общие стили --------------------- */
 
 body {
@@ -36,18 +37,23 @@ a {
 
 
 
+
 /* Прячем доступно ----------------- */
 
 .visually-hidden {
     position: absolute;
+
     width: 1px;
     height: 1px;
     margin: -1px;
-    border: 0;
     padding: 0;
+
+    border: 0;
+    
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
 
 
 
@@ -57,11 +63,16 @@ a {
 .container {
     min-width: 768px;
     max-width: 1200px;
-    /*width: 1200px;*/
     margin: 0 auto;
-    background-color: #ffffff;
+
+    /*background-color: #ffffff;*/
     box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.1);
-} 
+}
+
+.content-container {
+    padding: 0 6%;
+}
+
 
 
 
@@ -69,11 +80,59 @@ a {
 /* Хедер, Навигация ---------------- */
 
 .main-header {
+    min-height: 56px;
+
     background-color: #ffffff;
 }
 
+.main-navigation {
+    position: relative;
+}
+
+.main-header-logo {
+    position: absolute;
+    top: 0; 
+    right: 0;
+    left: 0; 
+    z-index: 99;
+
+    width: 138px;
+    height: 70px;
+    margin: auto;
+}
+
 .site-navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    margin: 0;
+    padding: 0 6%;
+
     list-style: none;
+}
+
+.site-navigation li {
+    width: 20%;
+    padding: 15px 0;
+}
+
+.site-navigation li:nth-child(1),
+.site-navigation li:nth-child(2) {
+    text-align: left;
+}
+
+.site-navigation li:nth-child(3), 
+.site-navigation li:nth-child(4) {
+    text-align: right;
+}
+
+.site-navigation li:nth-child(2) {
+    margin-left: -12%;
+}
+
+.site-navigation li:nth-child(3) {
+    margin-right: -12%;
 }
 
 .site-navigation a {
@@ -89,11 +148,119 @@ a {
     color: rgba(0,0,0,0.3);
 }
 
-a.active-page,
-a.active-page:hover,
-a.active-page:focus {
+.site-navigation a.active-page,
+.site-navigation a.active-page:hover,
+.site-navigation a.active-page:focus {
     color: #766357;
 }
+
+
+
+
+
+/* Футер ------------------ */
+
+.main-footer {
+    display: flex;
+    align-items: center;
+    min-height: 120px;
+
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+.footer-hashtag, 
+.footer-social, 
+.footer-copyright {
+    width: 33.33%;
+    margin: 0;
+    padding: 0;
+    
+    text-align: center;
+}
+
+.footer-hashtag a {
+    font-size: 21px;
+    color: #000000;
+}
+
+.footer-social {
+    display: flex;
+    justify-content: center;
+
+    list-style: none;
+}
+
+.footer-social-item {
+    width: 46px;
+    height: 48px;
+    margin-right: 6px; 
+
+    background-color: #81b3d2;
+}
+
+.footer-social-item:last-child {
+    margin-right: 0px; 
+}
+
+.social-button {
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    color: #ffffff;
+
+    background-color: #81b3d2;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.social-button:hover,
+.social-button:focus {
+    background-color: #669ec0;
+}
+
+.social-button:active {
+    color: rgba(255, 255, 255, 0.3);
+
+    background-color: #5496bd;
+}
+
+.footer-social-item:nth-child(1) .social-button {
+    background-image: url(../img/twitter.svg);
+}
+
+.footer-social-item:nth-child(2) .social-button {
+    background-image: url(../img/fb-icon.svg);
+}
+
+.footer-social-item:nth-child(3) .social-button {
+    background-image: url(../img/youtube.svg);
+}
+
+.footer-copyright {
+    font-weight: 400;
+}
+
+.footer-copyright a {
+    color: #000000;
+}
+
+.footer-copyright a:hover {
+    text-decoration: underline;
+}
+
+.copyright-button {
+    display: inline-block;
+    width: 115px;
+    height: 41px;
+    margin-left: 5px;
+    vertical-align: middle;
+    
+    background-image: url(../img/logo-htmlacademy.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
 
 
 
@@ -316,55 +483,6 @@ a.active-page:focus {
     background-repeat: no-repeat;
     background-size: auto;
     background-position: 50% 56%;
-}
-
-
-
-
-/* Футер ------------------ */
-
-.main-footer {
-    background-color: rgba(255, 255, 255, 0.9);
-}
-
-.footer-hashtag a {
-    font-size: 21px;
-    color: #000000;
-}
-
-.footer-social {
-    text-align: center;
-    list-style: none;
-}
-
-
-.social-button {
-    color: #ffffff;
-
-    background-color: #81b3d2;
-}
-
-.social-button:hover,
-.social-button:focus {
-    background-color: #669ec0;
-}
-
-.social-button:active {
-    color: rgba(255, 255, 255, 0.3);
-
-    background-color: #5496bd;
-}
-
-.footer-copyright {
-    font-weight: 400;
-}
-
-.footer-copyright a {
-    color: #000000;
-}
-
-.footer-copyright a:hover {
-    text-decoration: underline;
 }
 
 
@@ -593,68 +711,8 @@ a.filter-item-title:active {
 /* ======================= Потом все перемещу наверх ======================= */
 /* ======================= и аккуратно расставлю =) ======================== */
 
-.content-container {
-    margin-left: 72px;
-    margin-right: 72px;
-}
-
-.main-header {
-    min-height: 56px;
-}
-
-.main-navigation {
-    position: relative;
-}
-
-.main-header-logo {
-    margin: auto;
-
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    right: 0;
-
-    width: 138px;
-    height: 70px;
-
-    z-index: 99;
-}
-
-.site-navigation {
-    margin: 0;
-    padding: 0 6%;
 
 
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.site-navigation li {
-    padding-top: 15px;
-    padding-bottom: 15px;
-
-    width: 20%;
-}
-
-.site-navigation li:nth-child(1),
-.site-navigation li:nth-child(2) {
-    text-align: left;
-}
-
-.site-navigation li:nth-child(3), 
-.site-navigation li:nth-child(4) {
-    text-align: right;
-}
-
-
-.site-navigation li:nth-child(2) {
-    margin-left: -12%;
-}
-
-.site-navigation li:nth-child(3) {
-    margin-right: -12%;
-}
 
 
 .welcome {
@@ -805,41 +863,6 @@ a.filter-item-title:active {
 
 
 
-
-.main-footer {
-    min-height: 120px;
-
-    display: flex;
-    align-items: center;
-}
-
-.footer-hashtag, 
-.footer-social, 
-.footer-copyright {
-    margin: 0;
-    padding: 0;
-
-    width: 33.33%;
-    text-align: center;
-}
-
-.footer-social {
-    display: flex;
-    justify-content: center;
-}
-
-.footer-social-item {
-    margin-right: 6px; 
-
-    height: 48px;
-    width: 46px;
-
-    background-color: #81b3d2;
-}
-
-.footer-social-item:last-child {
-    margin-right: 0px; 
-}
 
 
 
