--- a/css/style.css
+++ b/css/style.css
@@ -300,17 +300,23 @@ a {
 
 .features {
     background-color: #ffffff;
+    padding-top: 60px;
+
 }
 
 .section-description-header {
     font-size: 21px;
     text-align: center;
+    width: 500px;
+    margin: 0 auto;
 }
 
 .section-description-body {
     font-weight: 400;
     text-align: center;
     color: #333333;
+    width: 500px;
+    margin: 0 auto;
 }
 
 .features-list,
@@ -339,6 +345,8 @@ a {
 .more-feature-item h3 {
     font-size: 21px;
     line-height: 21px;
+    width: 150px;
+    margin: 0 auto;
 }
 
 .feature-item p,
@@ -346,9 +354,18 @@ a {
 .more-feature-item p {
     font-weight: 400;
     line-height: 21px;
+    margin: 0 12%;
+    margin-top: 22px;
+}
+.feature-item p {
+    margin: 0 15%;
+    margin-top: 22px;
+
 }
 
-
+.more-features-item {
+    width: 100%;
+}
 
 
 /* Предложения --------------------- */
@@ -356,17 +373,25 @@ a {
 .offers {
     background-color: #ffffff;
     text-align: center;
+    padding-top: 52px;
 }
 
 .section-description-big-header {
     font-size: 30px;
     line-height: 36px;
+    width: 500px;
+    margin: 0 auto;
 }
 
 .section-description-big-body {
     font-weight: 400;
     line-height: 24px;
     color: #333333;
+    text-align: center;
+    width: 500px;
+    margin: 0 auto;
+    margin-top: 23px;
+    margin-bottom: 46px;
 }
 
 .hotel-search-button {
@@ -461,14 +486,15 @@ a {
     color: #000000;
     opacity: 1;
 }
-.hotel-search-form input::placeholder {
-    color: #000000;
-    opacity: 1;
-}
 .hotel-search-form input:placeholder-shown {
     color: #000000;
     opacity: 1;
 }
+.hotel-search-form input::placeholder {
+    color: #000000;
+    opacity: 1;
+}
+
 /* -------------------------------- */
 
 
@@ -720,11 +746,6 @@ a.filter-item-title:active {
     /*padding-bottom: 71px;*/
 }
 
-.section-description-header {
-    margin-top: 61px;
-    margin-bottom: 27px;
-}
-
 .section-description-body {
     margin-top: 27px;
     margin-bottom: 50px;
@@ -753,6 +774,8 @@ a.filter-item-title:active {
 
     /*Временно*/
     min-height: 256px;
+    padding-top: 50px;
+    padding-bottom: 30px;
 }
 
 
@@ -776,6 +799,8 @@ a.filter-item-title:active {
 .for-pseudo-feature {
     display: block;
     width: 33.33%;
+    padding-top: 50px;
+    padding-bottom: 30px;
 
     color: #ffffff;
 
@@ -830,29 +855,29 @@ a.filter-item-title:active {
     min-height: 330px;
 }
 
-.more-feature-item:nth-child(1)::after,
-.more-feature-item:nth-child(2)::after,
-.more-feature-item:nth-child(3)::after {
+.more-feature-item:nth-child(1)::before,
+.more-feature-item:nth-child(2)::before,
+.more-feature-item:nth-child(3)::before {
     content: "";
-    width: 100px;
-    height: 100px;
-
+    width: 100%;
+    height: 130px;
+    display: block;
     background-repeat: no-repeat;
     background-position: 50% 100%;
-
-    position: absolute;
+    position: relative;
+    margin-bottom: 30px;
 }
 
-.more-feature-item:nth-child(1)::after {
+.more-feature-item:nth-child(1)::before {
     background-image: url("../img/icon-1.svg");
 }
 
-.more-feature-item:nth-child(2)::after {
-    background-image: url("../img/icon-2.svg");
+.more-feature-item:nth-child(2)::before {
+    background-image: url("../img/icon-3.svg");
 }
 
-.more-feature-item:nth-child(3)::after {
-    background-image: url("../img/icon-3.svg");
+.more-feature-item:nth-child(3)::before {
+    background-image: url("../img/icon-2.svg");
 }
 
 
