--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,8 @@ img {
 
 /* Прячем доступно ----------------- */
 
-/*
-input[type="checkbox"].visually-hidden,
-button[class="button-calendar"].visually-hidden
-*/
-
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden {
     position: absolute;
 
     width: 1px;
@@ -621,6 +617,8 @@ button[class="button-calendar"].visually-hidden
     padding-top: 7px;
 
     text-align: left;
+    
+    cursor: pointer;
 }
 
 .hotel-search-form label[for="child-count"] {
@@ -847,21 +845,29 @@ button[class="button-calendar"].visually-hidden
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 16%;
+    padding-top: 28px;
+    padding-bottom: 28px;
 }
 
 .hotels-filter-form fieldset {
+    margin: 0;
+    padding: 0;
     border: none;
+}
+
+.hotels-filter-form > fieldset {
+    width: 24%;
 }
 
 .hotels-filter-form legend {
     font-size: 16px;
     line-height: 21px;
     color: #ffffff;
+    margin: 0;
+    padding: 0;
 }
 
-.hotels-filter-form ul {
-    list-style: none;
-}
+
 
 .hotels-filter-form input,
 .hotels-filter-form label {
@@ -880,8 +886,13 @@ button[class="button-calendar"].visually-hidden
     color: #6a6a6a;
 }
 
+
+
+
+
 .filter-button {
-    padding: 0;
+    margin: 0 auto;
+    padding: 6px 35px;
 
     font-family: "PT Sans", "Arial", sans-serif;
     font-size: 14px;
@@ -893,8 +904,11 @@ button[class="button-calendar"].visually-hidden
     background-color: transparent;
 
     border: 2px solid #ffffff;
+    border-radius: 2px;
 
     cursor: pointer;
+
+    display: block;
 }
 
 .filter-button:hover {
@@ -903,21 +917,10 @@ button[class="button-calendar"].visually-hidden
     background-color: #ffffff;
 }
 
-.filter-price-container {
-    border: 2px solid #ffffff;
-}
 
-.filter-price-container input {
-    background-color: transparent;
 
-    border: none;
-}
 
-input.filter-input-price {
-    border-right: 2px solid #ffffff;
-}
 
-    
 
 
 /* Результаты фильтрации ----------- */
@@ -1067,6 +1070,35 @@ a.filter-item-title:active {
     margin: 0;
 }
 
+.hotel-stars {
+    text-align: right;
+    background-image: url(../img/star.svg);
+    background-repeat: space no-repeat;
+    margin-left: auto;
+    height: 20px;
+    width: 100px;
+}
+
+.one-star {
+    width: 18px;
+}
+
+.two-star {
+    width: 41px;
+}
+
+.three-star {
+    width: 65px;
+}
+
+.four-star {
+    width: 89px;
+}
+
+.five-star {
+    width: 107px;
+}
+
 .hotel-rating {
     background-color: #f2f2f2;
     margin-top: 42px;
@@ -1074,36 +1106,7 @@ a.filter-item-title:active {
     padding-right: 12px;
     padding-top: 3px;
     padding-bottom: 3px;
-
 }
-
-.hotel-stars {
-    text-align: right;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 .hotels-filter-setting {
@@ -1113,6 +1116,8 @@ a.filter-item-title:active {
 .hotels-filter-form {
     display: flex;
 }
+
+
 
 .filter-info-container {
     display: flex;
@@ -1162,31 +1167,52 @@ a.filter-item-title:active {
 }
 
 .sorting-direction-list li:first-child {
-    margin-top: -9px;
+    margin-top: -13px;
+}
+
+.sorting-direction-list li:last-child {
+    margin-top: 13px;
 }
 
 .sorting-direction-up,
 .sorting-direction-down {
-    font-size: 0px;
-
-}
-
-.sorting-direction-up:after,
-.sorting-direction-down:after {
-    content: "";
+    border: 6px solid transparent;
     width: 10px;
     height: 10px;
-    position: static;
 }
 
-.sorting-direction-up:after {
-    border: 6px solid transparent;
-    border-bottom: 10px solid green;
+.sorting-direction-up {
+    border-bottom: 10px solid #cacaca;
 }
 
-.sorting-direction-down:after {
-    border: 6px solid transparent;
-    border-top: 10px solid green;
+.sorting-direction-down {
+    border-top: 10px solid #cacaca;
+}
+
+.sorting-direction-up:hover,
+.sorting-direction-up:focus {
+    border-bottom-color: #000000;
+}
+
+.sorting-direction-down:hover,
+.sorting-direction-down:focus {
+    border-top-color: #000000;
+}
+
+.sorting-direction-up:active {
+    border-bottom-color: #81b3d2;
+}
+
+.sorting-direction-down:active {
+    border-top-color: #81b3d2;
+}
+
+.sorting-direction-down.active-sorting-direction {
+    border-top-color: #81b3d2;
+}
+
+.sorting-direction-up.active-sorting-direction {
+    border-bottom-color: #81b3d2;
 }
 
 .filter-result-list {
@@ -1209,6 +1235,7 @@ a.filter-item-title:active {
     align-items: flex-start;
     min-height: 150px;
     padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .hotel-description-container {
@@ -1240,5 +1267,155 @@ a.filter-item-title:active {
 .hotel-description-container h3 {
     margin-top:-4px;
 }
+
+
+
+
+.filter-checkbox-list {
+    margin: 0;
+    padding: 0;
+    margin-top: 22px;
+    list-style: none;
+    padding-left: 40px;
+}
+
+
+
+/* ================ Слайдер ================ */
+.range-controls {
+  position: relative;
+
+  margin-bottom: 32px;
+}
+
+.range-controls .scale {
+  height: 2px;
+
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.range-controls .bar {
+  width: 80%;
+  height: 2px;
+
+  background: #ffffff;
+}
+
+.range-toggle {
+    position: absolute;
+    top: -9px;
+    width: 20px;
+    height: 20px;
+    background-color: #ababab;
+    border: 8px solid #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+    cursor: pointer;
+}
+
+.range-toggle:hover {
+  background: #1c4f80;
+}
+
+.range-toggle-min {
+  left: 0;
+}
+
+.range-toggle-max {
+  left: 80%;
+}
+/* =================================== */
+
+
+
+.right-fildset-wrapper {
+    margin-left: auto;
+    width: 30%;
+}
+
+.filter-price-container {
+    border: 2px solid #ffffff;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    position: relative;
+    margin-top: 9px;
+    height: 36px;
+    padding: 0;
+}
+
+.filter-price-container::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 2px;
+    height: 22px;
+    background: #ffffff;
+    transform: translate(-50%, -50%);
+}
+
+.filter-label-price {
+    text-align: right;
+
+    width: 49%;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.filter-input-price {
+    background-color: transparent;
+    border: none;
+    width: 50%;
+    height: 32px;
+}
+
+
+
+
+.filter-input-checkbox {
+
+}
+
+.filter-option {
+    margin-top: 20px;
+}
+
+.filter-option label {
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+}
+
+
+.filter-input-checkbox + label::before {
+    content: "";
+
+    position: absolute;
+    top: -4px;
+    left: -40px;
+
+    width: 30px;
+    height: 30px;
+
+    background-image: url("../img/checkbox-off.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+
+}
+
+.filter-input-checkbox:checked + label::before {
+    background-image: url("../img/checkbox-on.svg");
+}
+
+.filter-input-checkbox:disabled + label::before {
+    opacity: 0.3;
+}
+
+.filter-input-checkbox:checked:disabled + label::before {
+    opacity: 0.3;
+}
+
+
+
 
 
