--- a/css/style.css
+++ b/css/style.css
@@ -1005,7 +1005,7 @@ input[type="checkbox"].visually-hidden {
 
     width: 22px;
     height: 22px;
-    
+
     border: 9px solid #ffffff;
 }
 
@@ -1017,11 +1017,11 @@ input[type="checkbox"].visually-hidden {
 }
 
 .range-toggle-max {
-    left: 253px;
+    left: 80%;
 }
 
 .range-toggle-max:hover {
-    left: 252px;
+    left: 80%;
 }
 /* =========================================== */
 
