--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ input[type="checkbox"].visually-hidden {
 .container {
     min-width: 768px;
     max-width: 1200px;
+    width: 100%;
     margin: 0 auto;
 
     box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.2);
