--- a/css/style.css
+++ b/css/style.css
@@ -458,7 +458,7 @@ input[type="checkbox"].visually-hidden {
 .more-features-item {
     width: 33.33%;
     min-height: 330px;
-    padding: 0 4%;
+    padding: 56px 4%;
 }
 
 .more-features-item:nth-child(1)::before,
@@ -470,7 +470,7 @@ input[type="checkbox"].visually-hidden {
 
     display: block;
     width: 100%;
-    height: 132px;
+    height: 76px;
     margin-bottom: 30px;
     
     background-repeat: no-repeat;
