еще немного изменений

--- a/css/style.css
+++ b/css/style.css
@@ -172,12 +172,14 @@ input[type="checkbox"].visually-hidden {
     display: flex;
     align-items: center;
     min-height: 120px;
+    padding: 30px 0;
 
     background-color: rgba(255, 255, 255, 0.9);
 }
 
 .index-footer {
     position: relative;
+
     margin-top: -120px;
 }
 
@@ -186,9 +188,14 @@ input[type="checkbox"].visually-hidden {
 .footer-copyright {
     width: 33.33%;
     margin: 0;
-    padding: 30px 3%;
+    padding: 0 3%;
     
     text-align: center;
+}
+
+.footer-hashtag,
+.footer-copyright {
+    padding-top: 1px;
 }
 
 .footer-hashtag a {
@@ -1073,6 +1080,7 @@ input[type="checkbox"].visually-hidden {
 
 .filter-info-container {
     display: flex;
+    align-items: flex-start;
     min-height: 86px;
     padding-top: 31px;
 }
@@ -1143,33 +1151,29 @@ input[type="checkbox"].visually-hidden {
     min-width: 110px;
     margin: 0;
     padding: 0;
-    padding-top: 1px;
+    padding-top: 8px;
 
     list-style: none;
 }
 
 .sorting-direction-list li {
-    margin-left: 11px;
-}
-
-.sorting-direction-list li:first-child {
-    margin-top: -13px;
-}
-
-.sorting-direction-list li:last-child {
-    margin-top: 13px;
+    margin-left: 12px;
 }
 
 .sorting-direction-up,
 .sorting-direction-down {
-    width: 10px;
-    height: 10px;
+    display: block;
 
-    border: 6px solid transparent;
+    width: 0;
+    height: 0;
+
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
 }
 
 .sorting-direction-up {
     border-bottom: 10px solid #cacaca;
+    margin-top: 1px;
 }
 
 .sorting-direction-down {
@@ -1178,12 +1182,12 @@ input[type="checkbox"].visually-hidden {
 
 .sorting-direction-up:hover,
 .sorting-direction-up:focus {
-    border-bottom-color: #000000;
+    border-bottom-color: #231f20;
 }
 
 .sorting-direction-down:hover,
 .sorting-direction-down:focus {
-    border-top-color: #000000;
+    border-top-color: #231f20;
 }
 
 .sorting-direction-up:active {
@@ -1362,13 +1366,12 @@ input[type="checkbox"].visually-hidden {
 /* =========================================== */
 
 .hotel-rating {
-    margin-top: 42px;
-    padding-left: 14px;
-    padding-right: 12px;
-    padding-top: 3px;
-    padding-bottom: 3px;
+    margin-top: 43px;
+    padding: 3px 4px 3px;
+    padding-left: 6px;
 
     color: #666666;
+    text-align: center;
 
     background-color: #f2f2f2;
 }
